--- a/src/Design System/Icons/MUI Icons/MUIIcons.css
+++ b/src/Design System/Icons/MUI Icons/MUIIcons.css
@@ -7,7 +7,13 @@
     height: 52px;
 }
 
-.iconsmall{
-    width: 100px;
-    height: 100px;
+.iconSmall {
+    width: 35px;;
+    height: 35px;
 }
+
+.iconMedium{
+    width: 50px;
+    height: 50px;
+}
+
