--- a/src/Design System/Accessibility/Accessibility.css
+++ b/src/Design System/Accessibility/Accessibility.css
@@ -1,5 +1,8 @@
 
 
 .container{
-    margin: 70px
+    margin: 50px;
+    font-family: 'Arial', sans-serif;
+    font-weight: 400;
+    line-height: 1.6;
 }
